<resources>
    <string name="app_name">ProyectoNuevo</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_una_cuenta_reg_strate_aqu">¿No tienes una cuenta? Regístrate aquí</string>
    <sting name="button">Registrarse</sting>
</resources>